<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.svschatz.trackrun.SettingsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/checkBox_enableGps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_gps"
            android:textSize="24sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioButton_countLaps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/count_laps"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/radioButton_countMiles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/count_miles"
                android:textSize="24sp" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_lpm"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:text="@string/laps_mile"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editText_lapsPerMile"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:text="@string/default_lap_per_mile"
                android:textAlignment="center"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <TextView
                android:id="@+id/textView_spm"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:text="@string/steps_mile"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editText_stepsPerMile"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/default_steps_per_mile"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBox_fakeEvents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fake_events"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_saveSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="300dp"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
